tests/typecheck/fail/unsigned_nat.sail
function bit[5] test ((bit[5]) x) =
{
  (nat) y := x;
  y
}